# Lego-Sequential-Reasoning-Build-Engine

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: models.py  parts.py  renders.py
backend/app/core/: config.py  db.py  db_models.py  ldraw.py  leocad_cli.py  storage.py
backend/app/schemas/: model.py  parts.py  render.py
backend/app/services/: model_service.py  parts_service.py  render_service.py
backend/tests/: conftest.py  test_model_api.py
engine/: config.py  main.py  prompts.py  pyproject.toml
engine/builder/: generator.py  ldraw_converter.py
engine/control_plane/: client.py
engine/evaluator/: clip_embedder.py  scorer.py
engine/geometry/: model_summary.py
engine/orchestration/: build_loop.py  run_manager.py
engine/persistence/: db.py  models.py
engine/planner/: planner.py
engine/prompts/: builder_system.txt  namer_system.txt  planner_system.txt
engine/providers/: base.py  openai_provider.py
engine/retrieval/: collector.py  search_provider.py  serpapi_provider.py
engine/schemas/: micro_assembly.schema.json  plan.schema.json
engine/strategy/: buckets.py  clustering.py
engine/tests/: test_assembly_validator.py  test_model_summary.py
engine/validation/: assembly_validator.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: ArtifactGallery.tsx  CommandConsole.tsx  Flipbook.tsx  ThreeViewer.tsx  Timeline.tsx
presets/: bird_sculpt.json  smoke_ai.json
(+3 files in other folders)
